test/integration/bad/array-read-write-assign.stan
generated quantities {
array[2] int x = {1,2};
x[x[1]] = 2;
}
